# pfobos

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PERFOMANCE.MD  README-TESTS.MD  README.md  dir.txt  fobos_fm_receiver.py  fobos_fm_receiver_paplay.py  fobos_spectrum_analyzer.py  fobos_wrapper.py  pfobos_fm_receiver.py  pfobos_spectrum_analyzer.py  pyproject.toml  requirements.txt  run_fobos_spectrum_analyzer.sh  run_rtanalyzer.py  run_setup.py  run_tests.py
bench/: profile_wrapper.py  wrapper_smoke.py
bench/observation_mode_research/: capture_noise.py  hwtel.py  retune_classic.py
doc/: aarch64-build.md  benchmark.md  edge-runtime-deployment.md  fwrapper.md  rtanalyzer.md  setup-fobos-sdr.md  structure.md  test_performance.md  tests.md  webui.md
fmreceiver/: fobos_fm_receiver.py  fobos_fm_receiver_paplay.py
pfobos/: __init__.py  fwrapper.py
rtanalyzer/: __init__.py  rtanalyzer.py
scripts/: async_test.py  audio_test.sh  check-fobos-sdr.sh  fobos-debug.py  fobos-sdr-readme.md  setup-fobos-sdr.sh  simple_async_test.py  sync_test.py  test_matplotlib.py
setup/: setup-fobos-sdr.sh
setup/aarch64/: CMakeToolchain-aarch64.cmake  Dockerfile.build-aarch64  build-cross.sh  build-docker.sh
shared/: __init__.py  fwrapper.py
tests/: __init__.py  __main__.py  benchmark.py  benchmark_analyze.py  test_async_integration.py  test_capture_session.py  test_integration.py  test_mock_fobos.py  test_performance.py  test_stub_integration.py  test_wrapper_logic.py
tests/stub/: .gitignore  build.py  signals.json  (+1 more)
webui/: __main__.py  sdr_worker.py  server.py
(+3 files in other folders)
