[project]
name = "pfobos"
version = "0.1.0"
description = "Python wrapper for Fobos SDR C library"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
    "matplotlib>=3.4.0",
    "cffi>=1.14.0",
    "pandas>=1.3.0",
    "tabulate>=0.8.9",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.0",
    "pulsectl>=22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "rtanalyzer", "fmreceiver"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
